--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e32aff8e-515d-48b9-a45f-95694e8273ba",
    "metadata": {},
    "outputs": [
@@ -26,6 +26,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Classes/Labels:  [ 18 127  40  88  87  49 108  22  34  24  30  54  71 149 119  95  70  65\n",
+      "  98 100  76   7  66  77  97  89 134 129  11  86 132  47  33  36  10 147\n",
+      "  44  16 122 136  90 148  79  60  41  62  51   2   0  91 140 124   8 117\n",
+      " 144  17  20 103 101 111 146  39  73  67 131 104   3  92   6  21  83  25\n",
+      " 142  28  32 102 107  19  84  13  29   4   1  35 138  53  50  63  14  69\n",
+      "  42   5  59  94  80  99 110  23 141 139 115  81 121 133  56  78  45  55\n",
+      "  12  52  93  38  85  74 128  64 125  61  57 137 135   9 145 109  68  31\n",
+      " 105  48  27 120 150 113 118 130  72  37 126  26 112 106 143 116  46  75\n",
+      "  82  58  96  15  43 123 114]\n",
       "Number of Observations:  1210\n",
       "Number of Variables:  16\n",
       "\n",
@@ -46,18 +56,26 @@
       "Oily                int64\n",
       "Dry                 int64\n",
       "Normal              int64\n",
-      "dtype: object\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'classes' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 23\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber of Variables: \u001b[39m\u001b[38;5;124m\"\u001b[39m, num_variables)\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mVariable Types:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, variable_types)\n\u001b[1;32m---> 23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mClasses/Labels: \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mclasses\u001b[49m)\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m# Display unique labels in the 'labels' column\u001b[39;00m\n\u001b[0;32m     27\u001b[0m unique_labels \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabels\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39munique()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'classes' is not defined"
+      "dtype: object\n",
+      "\n",
+      "Classes/Labels:  [ 18 127  40  88  87  49 108  22  34  24  30  54  71 149 119  95  70  65\n",
+      "  98 100  76   7  66  77  97  89 134 129  11  86 132  47  33  36  10 147\n",
+      "  44  16 122 136  90 148  79  60  41  62  51   2   0  91 140 124   8 117\n",
+      " 144  17  20 103 101 111 146  39  73  67 131 104   3  92   6  21  83  25\n",
+      " 142  28  32 102 107  19  84  13  29   4   1  35 138  53  50  63  14  69\n",
+      "  42   5  59  94  80  99 110  23 141 139 115  81 121 133  56  78  45  55\n",
+      "  12  52  93  38  85  74 128  64 125  61  57 137 135   9 145 109  68  31\n",
+      " 105  48  27 120 150 113 118 130  72  37 126  26 112 106 143 116  46  75\n",
+      "  82  58  96  15  43 123 114]\n",
+      "Unique Labels: [ 18 127  40  88  87  49 108  22  34  24  30  54  71 149 119  95  70  65\n",
+      "  98 100  76   7  66  77  97  89 134 129  11  86 132  47  33  36  10 147\n",
+      "  44  16 122 136  90 148  79  60  41  62  51   2   0  91 140 124   8 117\n",
+      " 144  17  20 103 101 111 146  39  73  67 131 104   3  92   6  21  83  25\n",
+      " 142  28  32 102 107  19  84  13  29   4   1  35 138  53  50  63  14  69\n",
+      "  42   5  59  94  80  99 110  23 141 139 115  81 121 133  56  78  45  55\n",
+      "  12  52  93  38  85  74 128  64 125  61  57 137 135   9 145 109  68  31\n",
+      " 105  48  27 120 150 113 118 130  72  37 126  26 112 106 143 116  46  75\n",
+      "  82  58  96  15  43 123 114]\n"
      ]
     }
    ],
@@ -77,7 +95,10 @@
     "num_variables = df.shape[1]\n",
     "\n",
     "# Get the column types\n",
+    "\n",
     "variable_types = df.dtypes\n",
+    "classes = df['labels'].unique()  # Get unique labels from the 'labels' column\n",
+    "print(\"\\nClasses/Labels: \", classes)\n",
     "\n",
     "\n",
     "# Print the details\n",
