--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "e32aff8e-515d-48b9-a45f-95694e8273ba",
    "metadata": {},
    "outputs": [
@@ -26,11 +26,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dataset General information:\n",
       "Number of Observations:  1210\n",
-      "Number of Variables:  16\n",
+      "Number of Rows: 1210\n",
+      "Number of Columns/ Variables: 16\n",
       "\n",
       "Variable Types:\n",
-      " Unnamed: 0          int64\n",
+      "Unnamed: 0          int64\n",
       "product_href       object\n",
       "product_name       object\n",
       "product_type       object\n",
@@ -47,6 +49,26 @@
       "Dry                 int64\n",
       "Normal              int64\n",
       "dtype: object\n",
+      "\n",
+      "Number of Missing Values:  0\n",
+      "Missing Values by Variable:\n",
+      " Unnamed: 0         0\n",
+      "product_href       0\n",
+      "product_name       0\n",
+      "product_type       0\n",
+      "brand              0\n",
+      "notable_effects    0\n",
+      "skintype           0\n",
+      "price              0\n",
+      "description        0\n",
+      "picture_src        0\n",
+      "labels             0\n",
+      "Sensitive          0\n",
+      "Combination        0\n",
+      "Oily               0\n",
+      "Dry                0\n",
+      "Normal             0\n",
+      "dtype: int64\n",
       "\n",
       "Classes/Labels:  [ 18 127  40  88  87  49 108  22  34  24  30  54  71 149 119  95  70  65\n",
       "  98 100  76   7  66  77  97  89 134 129  11  86 132  47  33  36  10 147\n",
@@ -68,19 +90,29 @@
     "\n",
     "# General dataset info\n",
     "num_observations = len(df)\n",
-    "num_variables = df.shape[1]\n",
+    "num_rows, num_columns = df.shape\n",
+    "\n",
     "variable_types = df.dtypes\n",
+    "missing_values = df.isnull().sum()\n",
+    "num_missing_values = missing_values.sum()\n",
+    "num_unique_labels = df['labels'].nunique() if 'labels' in df.columns else \"Column 'labels' not found\"\n",
+    "unique_labels = df['labels'].unique() if 'labels' in df.columns else \"Column 'labels' not found\"\n",
     "\n",
     "# Calculate unique labels\n",
     "classes = df['labels'].unique()\n",
     "\n",
-    "# Print summary\n",
-    "print(\"Number of Observations: \", num_observations)\n",
-    "print(\"Number of Variables: \", num_variables)\n",
-    "print(\"\\nVariable Types:\\n\", variable_types)\n",
-    "print(\"\\nClasses/Labels: \", classes)\n",
     "\n",
-    "\n"
+    "# Print summary\n",
+    "print(\"Dataset General information:\")\n",
+    "print(\"Number of Observations: \", num_observations)\n",
+    "\n",
+    "print(f\"Number of Rows: {num_rows}\")\n",
+    "print(f\"Number of Columns/ Variables: {num_columns}\")\n",
+    "print(\"\\nVariable Types:\")\n",
+    "print(variable_types)\n",
+    "print(\"\\nNumber of Missing Values: \", num_missing_values)\n",
+    "print(\"Missing Values by Variable:\\n\", missing_values)\n",
+    "print(\"\\nClasses/Labels: \", classes)"
    ]
   }
  ],
