data preprocessing without URL preprocessing

--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "e32aff8e-515d-48b9-a45f-95694e8273ba",
    "metadata": {},
    "outputs": [
@@ -762,6 +762,201 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f6da5a4",
+   "metadata": {},
+   "source": [
+    "# Preprocessing techniques"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51600b7d",
+   "metadata": {},
+   "source": [
+    "The skin care dataset is for the most part clean. It doesn’t have any missing values, null entries, or duplicates. However, there are still areas for improvement to tailor the dataset for our recommendation system. For example, some variables are not formatted in a way that works with machine learning and are in need of encoding, also, since the dataset is sourced from an Indonesian source, we need to transform some data to make it more fitting to our English-language system.\n",
+    "\n",
+    "In this part, we will perform and document some important steps to make the data ready for analysis. Below, we detail each preprocessing step along with justifications and the code needed to complete the preprocessing step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e59a67a",
+   "metadata": {},
+   "source": [
+    "1.Encoded categorical variables \n",
+    "\n",
+    "Description: In this section, the following variables (product types, skin types, and notable effects) will be converted and represented as numerical data. This process will be done using one-hot encoding. One-hot encoding is a method that transforms categorical variables into binary vectors, where each variable is represented by a column, and the value is set to 1 or 0, depending on wether the category is represented in the specified record.\n",
+    "\n",
+    "Justification: Categorical variables, must be encoded into numerical values to make them compatible with machine learning models. By transforming these variables, we enable the model to understand the data accurately, without biases that might arise from treating them as non-numeric values. We chose to implement One-hot encoding instead of label encoding because label encoding imposes an order on categorical data, this can lead to inaccuracies as it causes the model to falsely interpret these categories as having a meaningful order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bb5eb0b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1.Encoded categorical variables \n",
+    "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "\n",
+    "# Convert relevant columns from strings into lists (splitting by comma)\n",
+    "columns_to_convert = ['skintype', 'product_type', 'notable_effects']\n",
+    "\n",
+    "# Convert comma-separated values to lists\n",
+    "for col in columns_to_convert:\n",
+    "    df[col] = df[col].apply(lambda x: [item.strip() for item in x.split(',')] if pd.notna(x) else [])\n",
+    "\n",
+    "# Initialize MultiLabelBinarizer\n",
+    "mlb = MultiLabelBinarizer()\n",
+    "\n",
+    "# Apply one-hot encoding for each categorical list column\n",
+    "for col in columns_to_convert:\n",
+    "    encoded = pd.DataFrame(mlb.fit_transform(df[col]), columns=[f\"{col}_{label}\" for label in mlb.classes_])\n",
+    "    df = pd.concat([df, encoded], axis=1)  # Merge with the original DataFrame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37f8b58d",
+   "metadata": {},
+   "source": [
+    "2.Price Formatting and Currency Conversion \n",
+    "\n",
+    "Description: We will be converting the currency in the dataset which are Indonesian Rupiah (IDR) to Saudi Riyals (SAR). This is important since the system is saudi-based and will be working with SAR for compatibility with the target audience’s currency. Also, the currency symbol will be stripped from the price values, and the prices will be converted to a decimal number for accuracy. \n",
+    "\n",
+    "Justification: This transformation is very important for accurate price comparisons and recommendations that are tailored to users in the Saudi region. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1cb60fe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2.Price Formatting and Currency Conversion\n",
+    "\n",
+    "IDR_to_SAR = 0.00023  # Adjust as needed\n",
+    "\n",
+    "def convert_to_sar(price):\n",
+    "    if isinstance(price, str) and 'Rp' in price:\n",
+    "        try:\n",
+    "            # Remove 'Rp' and commas, then convert to an integer\n",
+    "            price_idr = int(price.replace('Rp', '').replace('.', '').strip())\n",
+    "            return round(price_idr * IDR_to_SAR, 2)  \n",
+    "        except ValueError:\n",
+    "            return None  \n",
+    "    return price  \n",
+    "\n",
+    "df['price'] = df['price'].apply(convert_to_sar)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2d4c9ac",
+   "metadata": {},
+   "source": [
+    "3.Language Translation \n",
+    "\n",
+    "Description: Some product descriptions in the dataset are in Indonesian while some are in English. To ensure that records are in the same language, all description fields will be translated to English. \n",
+    "\n",
+    "Justification: Unifying the language will ensure records are accessible and consistent for analysis, as the system will operate in English."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "67b1b176",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Translation completed for the entire dataset.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3.Language Translation \n",
+    "\n",
+    "from deep_translator import GoogleTranslator\n",
+    "\n",
+    "# Initialize the Translator\n",
+    "translator = GoogleTranslator(source='auto', target='en')\n",
+    "\n",
+    "# Function to translate text\n",
+    "def translate_text(text):\n",
+    "    try:\n",
+    "        return translator.translate(text) if pd.notna(text) else text\n",
+    "    except Exception as e:\n",
+    "        return f\"Error: {e}\"  # Handle translation errors\n",
+    "\n",
+    "# Apply translation to the entire 'description' column\n",
+    "if 'description' in df.columns:\n",
+    "    df['description'] = df['description'].apply(translate_text)\n",
+    "\n",
+    "# Print confirmation\n",
+    "print(\"Translation completed for the entire dataset.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33ceb988",
+   "metadata": {},
+   "source": [
+    "4.Product URL validity \n",
+    "\n",
+    "Description: The dataset contains product URLs that need to be validated to ensure they point to active resources. Each URL will be checked to determine if it is broken or not. URLs that are found to be broken  will be removed from the dataset.\n",
+    "\n",
+    "Justification: The URLs will be presented as output to the user and ensuring URL functionality helps maintain the integrity and usability of the dataset, where accurate and accessible resources are important.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c7e2de7",
+   "metadata": {},
+   "source": [
+    "5.Image URL validity \n",
+    "\n",
+    "Description: The dataset contains image URLs that need to be validated for use in image recognition tasks. This step involves checking each image URL to ensure it is accessible. Any invalid image URLs will be removed.\n",
+    "\n",
+    "Justification: Ensuring the images are valid and accessible is essential for accurate image recognition tasks. Broken image URLs may disrupt the training process and can lead to inaccurate predictions. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e157e65",
+   "metadata": {},
+   "source": [
+    "6.Preprocessing output file "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "082eb2c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed file saved to processed_file.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the processed DataFrame\n",
+    "processed_file_path = 'processed_file.csv'  # Path to save the processed file\n",
+    "df.to_csv(processed_file_path, index=False)\n",
+    "\n",
+    "print(f'Processed file saved to {processed_file_path}')"
+   ]
   }
  ],
  "metadata": {
@@ -780,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
