--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8bc97b8b",
+   "metadata": {},
+   "source": [
+    "## General Information"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "e32aff8e-515d-48b9-a45f-95694e8273ba",
