--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -13,7 +13,8 @@
    "id": "8bc97b8b",
    "metadata": {},
    "source": [
-    "## General Information"
+    "## General Information\n",
+    "### In this section, "
    ]
   },
   {
