--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## General Information\n",
-    "### In this section, "
+    "###### In this section, "
    ]
   },
   {
