--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -94,8 +94,6 @@
     "num_rows, num_columns = df.shape\n",
     "\n",
     "variable_types = df.dtypes\n",
-    "missing_values = df.isnull().sum()\n",
-    "num_missing_values = missing_values.sum()\n",
     "num_unique_labels = df['labels'].nunique() if 'labels' in df.columns else \"Column 'labels' not found\"\n",
     "unique_labels = df['labels'].unique() if 'labels' in df.columns else \"Column 'labels' not found\"\n",
     "\n",
@@ -105,14 +103,11 @@
     "\n",
     "# Print summary\n",
     "print(\"Dataset General information:\")\n",
-    "print(\"Number of Observations: \", num_observations)\n",
     "\n",
-    "print(f\"Number of Rows: {num_rows}\")\n",
+    "print(f\"Number of Rows/ Observations: {num_rows}\")\n",
     "print(f\"Number of Columns/ Variables: {num_columns}\")\n",
     "print(\"\\nVariable Types:\")\n",
     "print(variable_types)\n",
-    "print(\"\\nNumber of Missing Values: \", num_missing_values)\n",
-    "print(\"Missing Values by Variable:\\n\", missing_values)\n",
     "print(\"\\nClasses/Labels: \", classes)"
    ]
   },
