reformatting processing section

--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -728,7 +728,7 @@
    "id": "5f6da5a4",
    "metadata": {},
    "source": [
-    "# Preprocessing techniques"
+    "## Preprocessing techniques"
    ]
   },
   {
@@ -746,7 +746,7 @@
    "id": "4e59a67a",
    "metadata": {},
    "source": [
-    "1.Encoded categorical variables \n",
+    "#### 1. Encoded categorical variables \n",
     "\n",
     "Description: In this section, the following variables (product types, skin types, and notable effects) will be converted and represented as numerical data. This process will be done using one-hot encoding. One-hot encoding is a method that transforms categorical variables into binary vectors, where each variable is represented by a column, and the value is set to 1 or 0, depending on wether the category is represented in the specified record.\n",
     "\n",
@@ -784,7 +784,7 @@
    "id": "37f8b58d",
    "metadata": {},
    "source": [
-    "2.Price Formatting and Currency Conversion \n",
+    "#### 2. Price Formatting and Currency Conversion \n",
     "\n",
     "Description: We will be converting the currency in the dataset which are Indonesian Rupiah (IDR) to Saudi Riyals (SAR). This is important since the system is saudi-based and will be working with SAR for compatibility with the target audience’s currency. Also, the currency symbol will be stripped from the price values, and the prices will be converted to a decimal number for accuracy. \n",
     "\n",
@@ -820,7 +820,7 @@
    "id": "a2d4c9ac",
    "metadata": {},
    "source": [
-    "3.Language Translation \n",
+    "#### 3. Language Translation \n",
     "\n",
     "Description: Some product descriptions in the dataset are in Indonesian while some are in English. To ensure that records are in the same language, all description fields will be translated to English. \n",
     "\n",
@@ -869,7 +869,7 @@
    "id": "33ceb988",
    "metadata": {},
    "source": [
-    "4.Product URL validity \n",
+    "#### 4. Product URL validity \n",
     "\n",
     "Description: The dataset contains product URLs that need to be validated to ensure they point to active resources. Each URL will be checked to determine if it is broken or not. URLs that are found to be broken  will be removed from the dataset.\n",
     "\n",
@@ -881,7 +881,7 @@
    "id": "0c7e2de7",
    "metadata": {},
    "source": [
-    "5.Image URL validity \n",
+    "#### 5. Image URL validity \n",
     "\n",
     "Description: The dataset contains image URLs that need to be validated for use in image recognition tasks. This step involves checking each image URL to ensure it is accessible. Any invalid image URLs will be removed.\n",
     "\n",
@@ -893,7 +893,7 @@
    "id": "7e157e65",
    "metadata": {},
    "source": [
-    "6.Preprocessing output file "
+    "#### 6. Preprocessing output file "
    ]
   },
   {
