replace product URL with unavailabe

--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -951,6 +951,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0b6ea86b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Updated dataset: Broken product URLs replaced with 'Unavailable'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# Function to check if a URL is working\n",
+    "def check_url_status(url):\n",
+    "    try:\n",
+    "        response = requests.head(url, timeout=5)  # Faster check with HEAD request\n",
+    "        if response.status_code == 200:\n",
+    "            return \"Working\"\n",
+    "        else:\n",
+    "            return \"Broken\"\n",
+    "    except requests.RequestException:\n",
+    "        return \"Broken\"\n",
+    "\n",
+    "# Placeholder for broken product URLs\n",
+    "URL_PLACEHOLDER = \"Unavailable\"\n",
+    "\n",
+    "# Check 'product_href' URLs and replace broken ones with \"Unavailable\"\n",
+    "if 'product_href' in df.columns:\n",
+    "    df['product_href_status'] = df['product_href'].apply(check_url_status)\n",
+    "    df.loc[df['product_href_status'] == \"Broken\", 'product_href'] = URL_PLACEHOLDER\n",
+    "    df.drop(columns=['product_href_status'], inplace=True)  # Remove status column after processing\n",
+    "\n",
+    "# Print summary\n",
+    "print(\"\\nUpdated dataset: Broken product URLs replaced with 'Unavailable'.\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0c7e2de7",
    "metadata": {},
@@ -972,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "082eb2c8",
    "metadata": {},
    "outputs": [
