--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "bb5eb0b4",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "1cb60fe5",
    "metadata": {},
    "outputs": [],
@@ -883,7 +883,7 @@
     "            return None  \n",
     "    return price  \n",
     "\n",
-    "df['price'] = df['price'].apply(convert_to_sar)\n",
+    "df['price_SAR'] = df['price_SAR'].apply(convert_to_sar)\n",
     "\n",
     "# Rename column to 'price_SAR'  \n",
     "df.rename(columns={'price': 'price_SAR'}, inplace=True) "
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "67b1b176",
    "metadata": {},
    "outputs": [
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "082eb2c8",
    "metadata": {},
    "outputs": [
