--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -759,7 +759,8 @@
    "id": "51600b7d",
    "metadata": {},
    "source": [
-    "As shown in the previous sections the skin care dataset is for the most part clean. It doesn’t have any missing values, null entries, the code below also verifies it has no duplicated.\n",
+    "As shown in the previous sections the skin care dataset is for the most part clean. It doesn’t have any missing values, null entries\n",
+    "The code below also verifies it has no duplicated records.\n",
     "\n"
    ]
   },
@@ -864,14 +865,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "1cb60fe5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2.Price Formatting and Currency Conversion\n",
     "\n",
-    "IDR_to_SAR = 0.00023  # Adjust as needed\n",
+    "IDR_to_SAR = 0.00023 \n",
     "\n",
     "def convert_to_sar(price):\n",
     "    if isinstance(price, str) and 'Rp' in price:\n",
@@ -903,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "67b1b176",
    "metadata": {},
    "outputs": [
@@ -928,7 +929,7 @@
     "    try:\n",
     "        return translator.translate(text) if pd.notna(text) else text\n",
     "    except Exception as e:\n",
-    "        return f\"Error: {e}\"  # Handle translation errors\n",
+    "        return f\"Error: {e}\"  \n",
     "\n",
     "# Apply translation to the entire 'description' column\n",
     "if 'description' in df.columns:\n",
@@ -990,6 +991,28 @@
     "\n",
     "# Print summary\n",
     "print(\"\\nUpdated dataset: Broken product URLs replaced with 'Unavailable'.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "ba13aeda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of broken links: 440\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count number of Unavailable links\n",
+    "unavailable_count = df['product_href'].str.contains('Unavailable', case=False, na=False).sum()\n",
+    "\n",
+    "# Output the result\n",
+    "print(f'Number of broken links: {unavailable_count}')"
    ]
   },
   {
