removed number or URLs

--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -759,7 +759,7 @@
    "id": "51600b7d",
    "metadata": {},
    "source": [
-    "As shown in the previous sections the skin care dataset is for the most part clean. It doesn’t have any missing values, null entries\n",
+    "As shown in the previous sections the skin care dataset is for the most part clean. It doesn’t have any missing values or null entries.\n",
     "The code below also verifies it has no duplicated records.\n",
     "\n"
    ]
@@ -991,28 +991,6 @@
     "\n",
     "# Print summary\n",
     "print(\"\\nUpdated dataset: Broken product URLs replaced with 'Unavailable'.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "ba13aeda",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of broken links: 440\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Count number of Unavailable links\n",
-    "unavailable_count = df['product_href'].str.contains('Unavailable', case=False, na=False).sum()\n",
-    "\n",
-    "# Output the result\n",
-    "print(f'Number of broken links: {unavailable_count}')"
    ]
   },
   {
