--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -759,8 +759,8 @@
    "id": "51600b7d",
    "metadata": {},
    "source": [
-    "As shown in the previous sections the skin care dataset is for the most part clean. It doesn’t have any missing values or null entries.\n",
-    "The code below also verifies it has no duplicated records.\n",
+    "As shown in the previous sections the skin care dataset is -for the most part- clean. It doesn’t have any missing values or null entries.\n",
+    "The code below also verifies it has no duplicate records.\n",
     "\n"
    ]
   },
@@ -797,7 +797,7 @@
    "id": "d6bd60fa",
    "metadata": {},
    "source": [
-    "However, there are still areas for improvement to tailor the dataset for our recommendation system. For example, some variables are not formatted in a way that works with machine learning and are in need of encoding, also, since the dataset is sourced from an Indonesian source, we need to transform some data to make it more fitting to our English-language system.\n",
+    "However, there are still areas for improvement to tailor the dataset for our recommendation system. For example, some variables are not formatted in a way that works with machine learning and are in need of encoding, also, since the dataset is sourced from an Indonesian source, we need to transform some data to make it more fitting for our Saudi-based, English-language system.\n",
     "\n",
     "In this part, we will perform and document some important steps to make the data ready for analysis. Below, we detail each preprocessing step along with justifications and the code needed to complete the preprocessing step."
    ]
@@ -809,14 +809,14 @@
    "source": [
     "#### 1. Encoded categorical variables \n",
     "\n",
-    "Description: In this section, the following variables (product types, skin types, and notable effects) will be converted and represented as numerical data. This process will be done using one-hot encoding. One-hot encoding is a method that transforms categorical variables into binary vectors, where each variable is represented by a column, and the value is set to 1 or 0, depending on wether the category is represented in the specified record. The set already includes one-hot encoding of skintype categories, therefore all we need is to convert product types and notable effects.\n",
+    "Description: In this section, the following categorical variables (product types, skin types, and notable effects) will be represented as numerical data. This process will be done using one-hot encoding. One-hot encoding is a method that transforms categorical variables into binary vectors, where each variable is represented by a column, and the value is set to 1 or 0, depending on wether the category is represented in the specified record. The set already includes one-hot encoding of skintype categories, therefore all we need is to convert product types and notable effects.\n",
     "\n",
     "Justification: Categorical variables, must be encoded into numerical values to make them compatible with machine learning models. By transforming these variables, we enable the model to understand the data accurately, without biases that might arise from treating them as non-numeric values. We chose to implement One-hot encoding instead of label encoding because label encoding imposes an order on categorical data, this can lead to inaccuracies as it causes the model to falsely interpret these categories as having a meaningful order."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "bb5eb0b4",
    "metadata": {},
    "outputs": [
@@ -846,7 +846,7 @@
     "\n",
     "for col in columns_to_encode:\n",
     "    encoded = pd.DataFrame(mlb.fit_transform(df[col]), columns=[f\"{col}_{label}\" for label in mlb.classes_])\n",
-    "    df = pd.concat([df, encoded], axis=1)  # Merge the encoded columns into the DataFrame\n",
+    "    df = pd.concat([df, encoded], axis=1)  \n",
     "\n",
     "print(\"Categorical encoding completed successfully!\")"
    ]
@@ -860,7 +860,7 @@
     "\n",
     "Description: We will be converting the currency in the dataset which are Indonesian Rupiah (IDR) to Saudi Riyals (SAR). This is important since the system is saudi-based and will be working with SAR for compatibility with the target audience’s currency. Also, the currency symbol will be stripped from the price values, and the prices will be converted to a decimal number for accuracy. The column is also renamed to price_SAR to clarify the currency.\n",
     "\n",
-    "Justification: This transformation is very important for accurate price comparisons and recommendations that are tailored to users in the Saudi region. \n"
+    "Justification: Converting prices to SAR and stripping currency symbols standardizes the data into a format that is fit for comparison and analysis. This allows models to perform more accurate price related recommendations.\n"
    ]
   },
   {
@@ -899,7 +899,7 @@
     "\n",
     "Description: Some product descriptions in the dataset are in Indonesian while some are in English. To ensure that records are in the same language, all description fields will be translated to English. \n",
     "\n",
-    "Justification: Unifying the language will ensure records are accessible and consistent for analysis, as the system will operate in English."
+    "Justification: Unifying the language will ensure records are accessible and consistent for analysis, leading to more accurate recommendations. Also since the system will operate in English this transformation is necessary for proper data interpretation and presentation."
    ]
   },
   {
@@ -946,14 +946,14 @@
    "source": [
     "#### 4. Product URL validity \n",
     "\n",
-    "Description: The dataset contains product URLs that need to be validated to ensure they point to active resources. Each URL will be checked to determine if it is broken or not. URLs that are found to be broken  will be removed from the dataset.\n",
+    "Description: The dataset contains product URLs that need to be validated to ensure they point to active resources. Each URL will be checked to determine if it is broken or not. URLs that are found to be broken  will be removed from the dataset and replaced with 'unavailable'.\n",
     "\n",
     "Justification: The URLs will be presented as output to the user and ensuring URL functionality helps maintain the integrity and usability of the dataset, where accurate and accessible resources are important.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "0b6ea86b",
    "metadata": {},
    "outputs": [
@@ -972,7 +972,7 @@
     "# Function to check if a URL is working\n",
     "def check_url_status(url):\n",
     "    try:\n",
-    "        response = requests.head(url, timeout=5)  # Faster check with HEAD request\n",
+    "        response = requests.head(url, timeout=5) \n",
     "        if response.status_code == 200:\n",
     "            return \"Working\"\n",
     "        else:\n",
@@ -987,7 +987,7 @@
     "if 'product_href' in df.columns:\n",
     "    df['product_href_status'] = df['product_href'].apply(check_url_status)\n",
     "    df.loc[df['product_href_status'] == \"Broken\", 'product_href'] = URL_PLACEHOLDER\n",
-    "    df.drop(columns=['product_href_status'], inplace=True)  # Remove status column after processing\n",
+    "    df.drop(columns=['product_href_status'], inplace=True)  \n",
     "\n",
     "# Print summary\n",
     "print(\"\\nUpdated dataset: Broken product URLs replaced with 'Unavailable'.\")\n"
@@ -1000,7 +1000,7 @@
    "source": [
     "#### 5. Image URL validity \n",
     "\n",
-    "Description: The dataset contains image URLs that need to be validated for use in image recognition tasks. This step involves checking each image URL to ensure it is accessible. Any invalid image URLs will be removed.\n",
+    "Description: The dataset contains image URLs that need to be validated for use in image recognition tasks. This step involves checking each image URL to ensure it is accessible. Any invalid image URLs will be replaced with 'unavailable' as a placeholder.\n",
     "\n",
     "Justification: Ensuring the images are valid and accessible is essential for accurate image recognition tasks. Broken image URLs may disrupt the training process and can lead to inaccurate predictions. "
    ]
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "082eb2c8",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1029,7 @@
    ],
    "source": [
     "# Save the processed DataFrame\n",
-    "processed_file_path = 'processed_file.csv'  # Path to save the processed file\n",
+    "processed_file_path = 'processed_file.csv' \n",
     "df.to_csv(processed_file_path, index=False)\n",
     "\n",
     "print(f'Processed file saved to {processed_file_path}')"
