--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 45,
       "id": "e32aff8e-515d-48b9-a45f-95694e8273ba",
       "metadata": {
         "id": "e32aff8e-515d-48b9-a45f-95694e8273ba",
@@ -104,30 +104,7 @@
             "Moisturizer    246\n",
             "Sunscreen      212\n",
             "Face Wash      202\n",
-            "Name: count, dtype: int64\n",
-            "Labels: [ 18 127  40  88  87  49 108  22  34  24  30  54  71 149 119  95  70  65\n",
-            "  98 100  76   7  66  77  97  89 134 129  11  86 132  47  33  36  10 147\n",
-            "  44  16 122 136  90 148  79  60  41  62  51   2   0  91 140 124   8 117\n",
-            " 144  17  20 103 101 111 146  39  73  67 131 104   3  92   6  21  83  25\n",
-            " 142  28  32 102 107  19  84  13  29   4   1  35 138  53  50  63  14  69\n",
-            "  42   5  59  94  80  99 110  23 141 139 115  81 121 133  56  78  45  55\n",
-            "  12  52  93  38  85  74 128  64 125  61  57 137 135   9 145 109  68  31\n",
-            " 105  48  27 120 150 113 118 130  72  37 126  26 112 106 143 116  46  75\n",
-            "  82  58  96  15  43 123 114]\n",
-            "Label distribution:\n",
-            " labels\n",
-            "108    149\n",
-            "22     104\n",
-            "11      83\n",
-            "54      70\n",
-            "89      69\n",
-            "      ... \n",
-            "82       1\n",
-            "96       1\n",
-            "43       1\n",
-            "123      1\n",
-            "114      1\n",
-            "Name: count, Length: 151, dtype: int64\n"
+            "Name: count, dtype: int64\n"
           ]
         }
       ],
@@ -162,12 +139,7 @@
         "\n",
         "# Display the count of each class in product_type\n",
         "print(\"Class distribution:\\n\", df[\"product_type\"].value_counts())\n",
-        "\n",
-        "# Display unique labels\n",
-        "print(\"Labels:\", df[\"labels\"].unique())\n",
-        "\n",
-        "# Display the count of each label\n",
-        "print(\"Label distribution:\\n\", df[\"labels\"].value_counts())\n"
+        "\n"
       ]
     },
     {
@@ -182,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 46,
       "id": "6a6daa3b",
       "metadata": {
         "id": "6a6daa3b",
@@ -379,7 +351,7 @@
               "4            0     0    1       1  "
             ]
           },
-          "execution_count": 41,
+          "execution_count": 46,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -391,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 47,
       "id": "96c3ad3f",
       "metadata": {
         "id": "96c3ad3f",
@@ -435,7 +407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 48,
       "id": "e194b823",
       "metadata": {
         "id": "e194b823",
@@ -579,7 +551,7 @@
               "max       1.000000     1.000000  "
             ]
           },
-          "execution_count": 43,
+          "execution_count": 48,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -591,7 +563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 49,
       "id": "39660e6b",
       "metadata": {
         "id": "39660e6b",
@@ -605,7 +577,7 @@
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[44], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msns\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Count number of missing values per column\u001b[39;00m\n",
+            "Cell \u001b[1;32mIn[49], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msns\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Count number of missing values per column\u001b[39;00m\n",
             "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
           ]
         }
