--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 41,
       "id": "e32aff8e-515d-48b9-a45f-95694e8273ba",
       "metadata": {
         "id": "e32aff8e-515d-48b9-a45f-95694e8273ba",
@@ -943,7 +943,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 42,
       "id": "bb5eb0b4",
       "metadata": {
         "id": "bb5eb0b4",
@@ -951,14 +951,10 @@
       },
       "outputs": [
         {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'sklearn'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[13], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 1.Encoded categorical variables\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MultiLabelBinarizer\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Convert relevant columns from strings into lists (splitting by commas) & ensure lowercase\u001b[39;00m\n\u001b[0;32m      5\u001b[0m columns_to_convert \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mskintype\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_type\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnotable_effects\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Categorical encoding completed successfully!\n"
           ]
         }
       ],
@@ -1091,9 +1087,9 @@
       "source": [
         "#### 4. Product URL validity\n",
         "\n",
-        "Description: The dataset contains product URLs that need to be validated to ensure they point to active resources. Each URL will be checked to determine if it is broken or not. URLs that are found to be broken  will be removed from the dataset and replaced with 'unavailable'.\n",
+        "Description: The dataset contains product URLs that need to be validated to ensure they point to active resources. Each URL will be checked to determine if it is broken or not. URLs that are found to be broken will be removed from the dataset and replaced with 'unavailable'.\n",
         "\n",
-        "Justification: The URLs will be presented as output to the user and ensuring URL functionality helps maintain the integrity and usability of the dataset, where accurate and accessible resources are important.\n"
+        "Justification: Since the URLs are not used for learning but are only displayed as output to the user, ensuring URL functionality helps maintain the integrity and usability of the dataset, where accurate and accessible resources are important.\n"
       ]
     },
     {
