--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -997,7 +997,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "id": "1cb60fe5",
       "metadata": {
         "id": "1cb60fe5"
@@ -1018,7 +1018,7 @@
         "            return None\n",
         "    return price\n",
         "\n",
-        "df['price_SAR'] = df['price_SAR'].apply(convert_to_sar)\n",
+        "df['price'] = df['price'].apply(convert_to_sar)\n",
         "\n",
         "# Rename column to 'price_SAR'\n",
         "df.rename(columns={'price': 'price_SAR'}, inplace=True)"
